--- a/SixRens.UI.Avalonia/SixRens.UI.Avalonia/SixRens.UI.Avalonia.csproj
+++ b/SixRens.UI.Avalonia/SixRens.UI.Avalonia/SixRens.UI.Avalonia.csproj
@@ -7,6 +7,12 @@
     <TrimMode>copyused</TrimMode>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>CA1822</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>CA1822</NoWarn>
+  </PropertyGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
