--- a/SixRens.UI.Avalonia/SixRens.UI.Avalonia/SixRens.UI.Avalonia.csproj
+++ b/SixRens.UI.Avalonia/SixRens.UI.Avalonia/SixRens.UI.Avalonia.csproj
@@ -14,12 +14,7 @@
     <NoWarn>CA1822</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
-    <Folder Include="ViewModels\插件管理\" />
-    <Folder Include="ViewModels\About\" />
-    <Folder Include="ViewModels\起课\" />
-    <Folder Include="ViewModels\编辑预设\" />
     <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
@@ -37,5 +32,16 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.17" />
     <PackageReference Include="SixRens.Core" Version="1.17.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <AvaloniaXaml Update="Views\MainWindow\TianPan.axaml">
+      <SubType>Designer</SubType>
+    </AvaloniaXaml>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\MainWindow\TianPan.axaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
