--- a/SixRens.UI.Avalonia/SixRens.UI.Avalonia/SixRens.UI.Avalonia.csproj
+++ b/SixRens.UI.Avalonia/SixRens.UI.Avalonia/SixRens.UI.Avalonia.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.17" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.17" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.17" />
     <PackageReference Include="SixRens.Core" Version="1.17.0" />
     <PackageReference Include="SixRens.Tools" Version="1.2.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
